--- a/style.css
+++ b/style.css
@@ -77,6 +77,10 @@ p {
 }
 
 @media only screen and (max-width: 375px) {
+  body {
+    height: 90vh;
+  }
+
   .link-container {
     padding: 2em 0.5em;
     width: 20em;
